# Baglanti_Indirici

./: .gitignore  CLAUDE.md  README.md  arayuz.py  indirici.py  installer.iss  main.py  pyproject.toml  requirements.txt
core/: config.py  logger.py  settings.py  utils.py  worker.py
core/domain/: __init__.py  models.py
core/download/: __init__.py  engine.py  progress.py  service.py  worker.py  yt_dlp_client.py
core/history/: __init__.py  repository.py
core/instagram/: __init__.py  session.py
core/platform/: registry.py  service.py
core/queue/: __init__.py  service.py
core/update/: __init__.py  pypi_client.py  worker.py  yt_dlp_updater.py
core/web/: __init__.py  extractor.py
docs/wiki/: hata_yonetimi_ve_loglama.md  index.md  instagram_login.md  kompakt_mod.md  log.md  mimari.md  paketleme.md  rules.md  tema_sistemi.md  yt_dlp_oto_guncelleme.md
tests/: test_controller_error_handling.py  test_download_engine.py  test_download_service.py  test_font_profiles.py  test_history_repository.py  test_instagram_session.py  test_logger.py  test_platform_registry.py  test_platforms.py  test_progress.py  test_pypi_client.py  test_queue_service.py  test_web_extractor.py  test_yt_dlp_client.py  test_yt_dlp_updater.py
ui/: components.py  icons.py  main_window.py  styles.py
ui/assets/: __init__.py  font_manager.py  icons.py
ui/themeing/: __init__.py  font_profiles.py  style_sections.py  styles.py  theme.py
ui/widgets/: __init__.py  components.py
ui/window/: __init__.py  compact_bubble.py  controller.py  instagram_login_dialog.py  main_window.py  view_state.py
