[project]
name = "baglanti-indirici"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15,<6",
    "yt-dlp>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
